test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/invalid_array_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: incomplete
        Bool: 0
        List[0]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: array_pointer
            Pointer: 
              Array: 
                TLong: 3
                Structure: 
                  TIdentifier: incomplete
                  Bool: 0
